# FDRI_RaspberryPi_Scripts

./: .gitignore  CONTRIBUTING.md  README.md  Test  fdri_raspicam_v0.2  pyproject.toml  sample2.py  setup.sh
.github/workflows/: pipeline.yml  test-python.yml
.old-scripts/: fdri_raspicam.py  fdri_raspicam_v0.2.py  upload photos
config/: config.yaml  rpi-camera.service
scratch/: sample.py
src/rasberrycam/: __init__.py  __main__.py  camera.py  core.py  image.py  location.py  logger.py  rasberrypi.py  s3.py  scheduler.py  temporal.py  utils.py
src/raspberrycam/: __main__.py  camera.py  config.py  core.py  face_blur.py  image.py  logger.py  s3.py  scheduler.py
tests/: test_camera.py  test_config.py  test_core.py  test_image.py  test_location.py  test_module.py  test_scheduler.py
